tests/compile-errors/ce-type-check-generic-mode.valk

fn main() {
    let x : Map[String] = HashMap[String, uint]{}
}